--- a/PowerManagementService/pom.xml
+++ b/PowerManagementService/pom.xml
@@ -63,6 +63,14 @@
    		<artifactId>jsoup</artifactId>
     	<version>1.14.3</version>
 	</dependency>
+	
+	
+	
+      <dependency>
+          <groupId>org.junit.platform</groupId>
+           <artifactId>junit-platform-surefire-provider</artifactId>
+           <version>1.2.0</version>
+           </dependency>
 
 
 
