--- a/PaymentService/pom.xml
+++ b/PaymentService/pom.xml
@@ -53,5 +53,12 @@
 <artifactId>jsoup</artifactId>
 <version>1.14.3</version>
 </dependency>
+
+<dependency>
+<groupId>org.junit.platform</groupId>
+<artifactId>junit-platform-surefire-provider</artifactId>
+<version>1.2.0</version>
+</dependency>
+
 </dependencies>
 </project>
